--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 @import "tailwindcss";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html,
-body, #root {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(28, 67, 108);
+@layer base {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  html,
+  body,
+  #root {
+    width: 100%;
+  }
 }
