--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
 @import "tailwindcss";
 
 @layer base {
+  @font-face {
+    font-family: "GT Sectra";
+    src: url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.eot");
+    src:
+      url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.eot?#iefix")
+        format("embedded-opentype"),
+      url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.woff2")
+        format("woff2"),
+      url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.woff")
+        format("woff"),
+      url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.ttf")
+        format("truetype"),
+      url("https://db.onlinewebfonts.com/t/ed147ffc0c22f110b20a665b27adfc1b.svg#GT Sectra Display Regular")
+        format("svg");
+  }
   * {
     margin: 0;
     padding: 0;
@@ -10,5 +25,11 @@
   body,
   #root {
     width: 100%;
+  }
+  main {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .right {
+    font-family: GT Sectra , Times;
   }
 }
