--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,38 @@
     width: 100%;
   }
   main {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      "Open Sans",
+      "Helvetica Neue",
+      sans-serif;
+  }
+  #canvas::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: url(/background-xl.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: all 0.3s linear;
   }
   .right {
-    font-family: GT Sectra , Times;
+    font-family:
+      GT Sectra,
+      Times;
+  }
+  main:has(#section-2 #line:hover) #canvas::after{
+    opacity: 0;
   }
 }
